Update with Bio

--- a/index.html
+++ b/index.html
@@ -6,54 +6,17 @@
     <title>My first HTML</title>
 </head>
 <body>
-    <h1>My own title</h1>
-    <p> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Red_Panda_%2825193861686%29.jpg/1600px-Red_Panda_%2825193861686%29.jpg" width="10%" height="10%" alt="Red_Panda"></p>
-    <p><a href="http://www.google.com" target="_blank">Google</a></p>
-    <p><a href="http://amazon.com"><strong>Amazon</strong></a></p>
-    <!-- Work in progress website-->
-    <p><a href="#">Github</a></p>
-    <ol>
-        <li>Set up bread</li>
-        <li>Set up components</li>
-        <li>Build sandwich</li>
-        <li>Slice sandwich</li>
-    </ol>
-    <ul>
-        <li>The Strokes</li>
-        <li>The Maccabees</li>
-        <li>Crystal Castles</li>
-        <li>Sleigh Bells</li>
+    <h1>Student Bio</h1>
+    <h2>Seychelle Koplik</h2>
+    <p> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Red_Panda_%2825193861686%29.jpg/1600px-Red_Panda_%2825193861686%29.jpg" width="20%" height="20%" alt="Red_Panda"></p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <h2>Contact Info</h2>
+    <ul><strong>
+        <li>Email: <a href="mailto:sey.koplik@gmail.com">sey.koplik@gmail.com</a></li>
+        <li>GitHub: <a href="https://github.com/SeyKoplik" target="_blank">SeyKoplik</a></li>
+        <li>Portfolio: <a href="#">Coming Soon</a></li>
+        </strong>
     </ul>
-    <table>
-        <thead>
-            <tr>
-                <th>Animal Kind</th>
-                <th>Animal Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Pupper</td>
-                <td>Jack</td>
-            </tr>
-
-            <tr>
-                <td>Horsey</td>
-                <td>Gallop</td>
-            </tr>
-
-            <tr>
-                <td>Kitty</td>
-                <td>Agnes</td>
-            </tr>
-
-            <tr>
-                <td>Rabbit</td>
-                <td>Hoppy</td>
-            </tr>
-        </tbody>
-    </table>
-    <BR><BR><BR><BR>
         
 </body>
 </html>
